--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.22.0",
+    "express": "^5.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
